// Vitest Snapshot v1

exports[`parsePinyin 1`] = `
{
  "_diao": "",
  "_shengmu": "",
  "_yunmu": "i",
  "rawpinyin": "yi",
}
`;

exports[`parsePinyin 2`] = `
{
  "_diao": "",
  "_shengmu": "",
  "_yunmu": "ve",
  "rawpinyin": "yve",
}
`;

exports[`parsePinyin 3`] = `
{
  "_diao": "",
  "_shengmu": "",
  "_yunmu": "iou",
  "rawpinyin": "you",
}
`;

exports[`parsePinyin 4`] = `
{
  "_diao": "",
  "_shengmu": "",
  "_yunmu": "u",
  "rawpinyin": "wu",
}
`;

exports[`parsePinyin 5`] = `
{
  "_diao": "",
  "_shengmu": "",
  "_yunmu": "uei",
  "rawpinyin": "wei",
}
`;

exports[`parsePinyin 6`] = `
{
  "_diao": "",
  "_shengmu": "d",
  "_yunmu": "uei",
  "rawpinyin": "dui",
}
`;

exports[`parsePinyin 7`] = `
{
  "_diao": "",
  "_shengmu": "t",
  "_yunmu": "uei",
  "rawpinyin": "tui",
}
`;

exports[`parsePinyin 8`] = `
{
  "_diao": "",
  "_shengmu": "j",
  "_yunmu": "vn",
  "rawpinyin": "jvn",
}
`;

exports[`parsePinyin 9`] = `
{
  "_diao": "",
  "_shengmu": "d",
  "_yunmu": "uen",
  "rawpinyin": "dun",
}
`;
